--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,20 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+	
+	<!-- hightlight.js 
+	 <link rel="stylesheet"
+    href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/styles/atom-one-dark.min.css">
+<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/highlight.min.js"></script>
+
+
+  <script>
+    hljs.configure({   // optionally configure hljs
+      languages: ['javascript', 'ruby', 'python']
+    });
+  </script>
+  
+   hightlight.js configuration  end -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
